--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   });	
     
     var , {
-	attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
+	attribution: 'Tiles &copy; Esri &mdash, Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
 });
 	  
  /* display basemap tiles -- see others at https://leaflet-extras.github.io/leaflet-providers/preview/ */
