--- a/index.html
+++ b/index.html
@@ -32,16 +32,11 @@
     scrollWheelZoom: false
   });	
     
-    var , {
-	attribution: 'Tiles &copy; Esri &mdash, Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
-});
 	  
  /* display basemap tiles -- see others at https://leaflet-extras.github.io/leaflet-providers/preview/ */
   L.tileLayer(
     'https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
-      attribution: '&copy; <a href="https://osm.org/copyright">\
-        OpenStreetMap</a> Esri &mdash, &copy;\
-        <a href="https://carto.com/attribution">CARTO</a>'
+      attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
   }).addTo(map);
 
   /* Display a point marker with pop-up text */
